# lambdaline

./: .gitignore  LICENSE  Main  Main.hs  README.md  build.hs  codex.tags  default.nix  hscope.out  lambdaline.cabal  notes.txt  stack.yaml  tags
LambdaLine/: GitComm.hs  LambdaLine.hs  PromptSegment.hs  Segment.hs  System.hs  Util.hs
LambdaLine/Shells/: Base.hs  Bash.hs  ShellPromptSegment.hs  ShellSegment.hs  Zsh.hs
LambdaLine/XTerm/: Colors.hs
