name:                lambdaline
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/josiah14/lambdaline
license:             GPLv3
license-file:        LICENSE
author:              Josiah Berkebile
maintainer:          praenato14@gmail.com
copyright:           2016 Josiah Berkebile
category:            CLI
build-type:          Simple
cabal-version:       >=1.24
extra-source-files:  README.md

executable lambdaline
  hs-source-dirs:      ./
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.9 && < 5,
                       text == 1.2.2.1,
                       split,
                       directory,
                       process,
                       shelly,
                       async,
                       enclosed-exceptions,
                       exceptions,
                       lifted-async,
                       lifted-base,
                       monad-control,
                       mtl,
                       system-fileio,
                       system-filepath,
                       transformers-base,
                       constraints,
                       stm,
                       transformers-compat,
                       unix-compat
